--- a/style.css
+++ b/style.css
@@ -59,8 +59,12 @@ body {
 }
 
 .estudante-div{
-    text-align: left;
+    text-align: center;
     padding: 16px 0;
-    
 }
-    
+
+.estudante-titulo{
+    text-align: center;
+    padding: 50px 0;
+}
+
