--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     display: inline-block;
     margin: 0 16px;
     font-size: 16px;
+    background-color: #0f0f0f;
 }
 
 .escola-imagem{
@@ -140,4 +141,43 @@ body {
    .button:active {
     filter: brightness(.8);
    }
-   
+
+   button {
+    font-size: 28px;
+    color: #e1e1e1;
+    font-family: inherit;
+    font-weight: 800;
+    cursor: pointer;
+    position: relative;
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition-duration: 400ms;
+    transition-property: color;
+  }
+  
+  button:focus,
+  button:hover {
+    color: #e9d7d7;
+  }
+  
+  button:focus:after,
+  button:hover:after {
+    width: 100%;
+    left: 0%;
+  }
+  
+  button:after {
+    content: "";
+    pointer-events: none;
+    bottom: -2px;
+    left: 50%;
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    background-color: #fff;
+    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition-duration: 400ms;
+    transition-property: width, left;
+  }
