--- a/projetos style.css
+++ b/projetos style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f1f1f1; 
+    background-color: #c52e2e; 
   }
 
   header {
@@ -50,3 +50,7 @@ body {
         font-size: 14px; 
         margin-bottom: 0; 
       }
+      p {
+        color: rgb(24, 17, 16);
+      }
+      
