--- a/escola style.css
+++ b/escola style.css
@@ -1,10 +1,44 @@
-body {
-    background-color: black;
-    margin: 0;
-    padding: 0;
-  }
-  
-  #map {
-    width: 100%;
-    height: 400px;
-  }
+/* style.css */
+
+/* Estilos para o cabeçalho */
+.cabecalho {
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.cabecalho-imagem {
+  width: 100px;
+}
+
+.cabecalho-lista {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.cabecalho-lista-item {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+/* Estilos para a seção da escola */
+.escola {
+  background-color: #fff;
+  padding: 20px;
+}
+
+.escola-div-conteudo {
+  margin-bottom: 20px;
+}
+
+.escola-texto-um {
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+/* Estilos para o mapa */
+#map {
+  height: 400px;
+  width: 100%;
+}
