--- a/estudantes style.css
+++ b/estudantes style.css
@@ -85,6 +85,12 @@ body {
 .button-right:hover {
   transform: scale(1.1);
 }
+.buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
 
 
 
