--- a/projetos style.css
+++ b/projetos style.css
@@ -84,14 +84,12 @@ footer {
   height: 2em;
  }
  
- /* Hide default HTML checkbox */
  .switch input {
   opacity: 0;
   width: 0;
   height: 0;
  }
  
- /* The slider */
  .slider {
   position: absolute;
   cursor: pointer;
@@ -124,3 +122,20 @@ footer {
   transform: translateX(2em);
   background: lightgreen;
  }
+ .grid-item {
+  text-align: center;
+  height: 200px;
+}
+
+.grid-item img {
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.grid-item {
+  text-align: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
