--- a/escola style.css
+++ b/escola style.css
@@ -42,3 +42,113 @@
   height: 400px;
   width: 100%;
 }
+
+
+
+/* style.css */
+.cabecalho {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #f5f5f5;
+}
+
+.cabecalho-imagem {
+  width: 100px;
+}
+
+.cabecalho-lista {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.cabecalho-lista-item {
+  margin-left: 10px;
+  text-decoration: none;
+  color: #333;
+}
+
+.cabecalho-lista-toggle {
+  display: none;
+  font-size: 18px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.escola {
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #fff;
+}
+
+.btn-sobre {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.escola-texto-um {
+  display: none;
+}
+
+.mapa {
+  margin-top: 20px;
+}
+
+.mapa-conteudo {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+}
+
+.mapa-conteudo iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* Estilos específicos para dispositivos móveis */
+@media only screen and (max-width: 600px) {
+  .cabecalho-lista {
+      display: none;
+  }
+
+  .cabecalho-lista.show {
+      display: flex;
+      flex-direction: column;
+      background-color: #f5f5f5;
+      padding: 10px;
+  }
+
+  .cabecalho-lista-item {
+      margin: 5px 0;
+  }
+
+  .cabecalho-lista-toggle {
+      display: block;
+  }
+
+  .cabecalho-imagem {
+      width: 100%;
+  }
+
+  .escola-div-conteudo {
+      text-align: center;
+  }
+
+  .escola-texto-um.show {
+      display: block;
+  }
+
+  .mapa-conteudo {
+      padding-bottom: 0;
+  }
+}
