--- a/escola style.css
+++ b/escola style.css
@@ -1,154 +1,97 @@
-/* style.css */
-
-/* Estilos para o cabeçalho */
-.cabecalho {
-  background-color: #f2f2f2;
-  padding: 20px;
+body {
+  font-family: Arial, sans-serif;
+  text-align: center;
 }
 
-.cabecalho-imagem {
-  width: 100px;
-}
+h1 {
+  margin-top: 40px;
+  
+    font-family: "Nome da fonte", Arial, sans-serif;
+    color: white;
+  }
+  
 
-.cabecalho-lista {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.cabecalho-lista-item {
+.student {
   display: inline-block;
-  margin-right: 10px;
+  margin: 20px;
+  transition: transform 0.3s;
 }
 
-/* Estilos para a seção da escola */
-.escola {
-  background-color: #fff;
-  padding: 20px;
+.student img {
+  width: 200px;
+  height: 100px;
 }
 
-.escola-div-conteudo {
-  margin-bottom: 20px;
+.student:hover {
+  transform: scale(1.1);
 }
 
-.escola-texto-um {
-  font-family: 'Poppins', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
+.buttons {
+  margin-top: 20px;
 }
 
-/* Estilos para o mapa */
-#map {
-  height: 400px;
-  width: 100%;
+.buttons a {
+  display: inline-block;
+  margin: 10px;
+  padding: 12px 24px;
+  text-decoration: none;
+  background-color: #26a131;
+  color: #333;
+  font-weight: bold;
+  border-radius: 4px;
 }
 
+body {
+  background: linear-gradient(to bottom, rgb(0, 0, 0), rgb(236, 9, 9));
+}
 
+.student div {
+  color: white;
+  font-size: 18px;
+}
 
-/* style.css */
-.cabecalho {
+.student div {
+  color: white;
+  font-size: 18px;
+  position: relative;
+}
+
+.buttons {
+  position: fixed;
+  bottom: 20px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  background-color: #f5f5f5;
+  width: 100%;
+  z-index: 9999;
 }
 
-.cabecalho-imagem {
-  width: 100px;
-}
-
-.cabecalho-lista {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.cabecalho-lista-item {
-  margin-left: 10px;
-  text-decoration: none;
-  color: #333;
-}
-
-.cabecalho-lista-toggle {
-  display: none;
-  font-size: 18px;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
-
-.escola {
-  margin-top: 20px;
-  padding: 20px;
-  background-color: #fff;
-}
-
-.btn-sobre {
-  background-color: #333;
-  color: #fff;
+.button-left,
+.button-right {
   padding: 10px 20px;
-  border: none;
-  cursor: pointer;
+  color: white;
+  text-decoration: none;
+  transition: transform 0.3s;
 }
 
-.escola-texto-um {
-  display: none;
+.button-left {
+  background-color: rgb(255, 0, 0);
 }
 
-.mapa {
+.button-right {
+  background-color: rgb(96, 112, 96);
+}
+
+.button-left:hover,
+.button-right:hover {
+  transform: scale(1.1);
+}
+.buttons {
+  display: flex;
+  justify-content: center;
   margin-top: 20px;
 }
 
-.mapa-conteudo {
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%;
-}
 
-.mapa-conteudo iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
 
-/* Estilos específicos para dispositivos móveis */
-@media only screen and (max-width: 600px) {
-  .cabecalho-lista {
-      display: none;
-  }
 
-  .cabecalho-lista.show {
-      display: flex;
-      flex-direction: column;
-      background-color: #f5f5f5;
-      padding: 10px;
-  }
 
-  .cabecalho-lista-item {
-      margin: 5px 0;
-  }
-
-  .cabecalho-lista-toggle {
-      display: block;
-  }
-
-  .cabecalho-imagem {
-      width: 100%;
-  }
-
-  .escola-div-conteudo {
-      text-align: center;
-  }
-
-  .escola-texto-um.show {
-      display: block;
-  }
-
-  .mapa-conteudo {
-      padding-bottom: 0;
-  }
-}
