--- a/projetos style.css
+++ b/projetos style.css
@@ -24,14 +24,14 @@ h1 {
 
 .grid-item {
   text-align: center;
-  width: 300px; /* Largura fixa */
-  height: 300px; /* Altura fixa */
+  width: 300px;
+  height: 300px; 
 }
 
 .grid-item img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Imagem quadrada com preenchimento */
+  object-fit: cover; 
   transition: transform 0.3s ease; 
 }
 
