--- a/escola style.css
+++ b/escola style.css
@@ -1,88 +1,77 @@
-/* style.css */
-
 body {
   font-family: Arial, sans-serif;
   text-align: center;
-}
-
-h1 {
-  margin-top: 40px;
-  font-family: "Nome da fonte", Arial, sans-serif;
-  color: white;
-}
-
-.student {
-  display: inline-block;
-  margin: 20px;
-  transition: transform 0.3s;
-}
-
-.student img {
-  width: 200px;
-  height: 100px;
-}
-
-.student:hover {
-  transform: scale(1.1);
-}
-
-.buttons {
-  margin-top: 20px;
-}
-
-.buttons a {
-  display: inline-block;
-  margin: 10px;
-  padding: 12px 24px;
-  text-decoration: none;
-  background-color: #26a131;
-  color: #333;
-  font-weight: bold;
-  border-radius: 4px;
-}
-
-body {
   background: linear-gradient(to bottom, rgb(0, 0, 0), rgb(236, 9, 9));
+  margin: 0; 
+  padding: 0; 
 }
 
-.student div {
+/* Estilos para o cabeçalho */
+.cabecalho {
+  background-color: #333;
   color: white;
-  font-size: 18px;
+  padding: 20px 0;
   position: relative;
 }
 
-.buttons {
-  position: fixed;
-  bottom: 20px;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  z-index: 9999;
+.cabecalho-imagem {
+  max-width: 100%; 
 }
 
-.button-left,
-.button-right {
-  padding: 10px 20px;
+.cabecalho-lista-toggle {
+  background-color: transparent;
   color: white;
+  border: none;
+  font-size: 24px;
+  position: absolute;
+  top: 20px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.menu {
+  display: none;
+  background-color: #333;
+  text-align: center;
+  position: absolute;
+  top: 60px; 
+  right: 10px;
+  z-index: 1;
+}
+
+.cabecalho-lista-item {
+  color: white;
+  padding: 10px 20px;
   text-decoration: none;
-  transition: transform 0.3s;
+  display: block;
 }
 
-.button-left {
-  background-color: rgb(255, 0, 0);
+.escola {
+  padding: 20px;
+  color: white;
+  text-align: center;
 }
 
-.button-right {
-  background-color: rgb(96, 112, 96);
+.btn-sobre {
+  background-color: #26a131;
+  color: #333;
+  border: none;
+  padding: 12px 24px;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.button-left:hover,
-.button-right:hover {
-  transform: scale(1.1);
+.mapa-conteudo {
+  width: 100%;
+  max-width: 800px; 
+  margin: 0 auto; 
 }
 
-.buttons {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
+footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
 }
