--- a/projetos style.css
+++ b/projetos style.css
@@ -130,3 +130,21 @@ input:checked+.slider:before {
   flex-direction: column;
   justify-content: center;
 }
+
+.imagem-container {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  position: relative;
+}
+
+/* Estilos para a imagem */
+.imagem-container img {
+  width: 100%; 
+  height: 100%;
+  transition: transform 0.5s ease;
+}
+
+.imagem-container:hover img {
+  transform: rotate(360deg);
+}
