--- a/escola style.css
+++ b/escola style.css
@@ -1,65 +1,107 @@
 /* Estilos para o cabeçalho */
 .cabecalho {
-  position: relative;
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #f5f5f5;
 }
 
 .cabecalho-imagem {
-  max-width: 100%;
+  width: 100px;
 }
 
-.cabecalho-lista-toggle {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  font-size: 24px;
-  background-color: transparent;
-  border: none;
-  color: white;
-  cursor: pointer;
-}
-
-/* Estilos para o menu */
-.menu {
-  background-color: #333;
-  text-align: center;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  z-index: 1;
-}
-
-.menu-lista {
-  list-style-type: none;
+.cabecalho-lista {
+  display: flex;
+  list-style: none;
+  margin: 0;
   padding: 0;
 }
 
-.menu-lista li {
-  display: inline;
-  margin-right: 20px;
-}
-
-.menu-lista a {
-  color: white;
+.cabecalho-lista-item {
+  margin-left: 10px;
   text-decoration: none;
+  color: #333;
 }
 
-/* Estilos para a seção de estudantes */
-.student-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
+.cabecalho-lista-toggle {
+  display: none;
+  font-size: 18px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.escola {
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #fff;
+}
+
+.btn-sobre {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.escola-texto-um {
+  display: none;
+}
+
+.mapa {
   margin-top: 20px;
 }
 
-.student {
-  text-align: center;
+.mapa-conteudo {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
 }
 
-.student img {
-  max-width: 100px;
-  max-height: 100px;
-  border-radius: 50%;
+.mapa-conteudo iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* Estilos específicos para dispositivos móveis */
+@media only screen and (max-width: 600px) {
+  .cabecalho-lista {
+      display: none;
+  }
+
+  .cabecalho-lista.show {
+      display: flex;
+      flex-direction: column;
+      background-color: #f5f5f5;
+      padding: 10px;
+  }
+
+  .cabecalho-lista-item {
+      margin: 5px 0;
+  }
+
+  .cabecalho-lista-toggle {
+      display: block;
+  }
+
+  .cabecalho-imagem {
+      width: 100%;
+  }
+
+  .escola-div-conteudo {
+      text-align: center;
+  }
+
+  .escola-texto-um.show {
+      display: block;
+  }
+
+  .mapa-conteudo {
+      padding-bottom: 0;
+  }
 }
