--- a/escola style.css
+++ b/escola style.css
@@ -12,13 +12,13 @@ header {
   color: #fff;
   padding: 10px;
   display: flex;
+  justify-content: space-between; /* Alinhar itens na extremidade do cabeçalho */
   align-items: center;
 }
 
 header img {
-  width: 50px;
-  height: 50px;
-  margin-right: 10px;
+  width: 50px; /* Reduza o tamanho da imagem */
+  height: 50px; /* Reduza o tamanho da imagem */
 }
 
 nav {
@@ -41,7 +41,7 @@ nav {
   background-color: #000;
   position: absolute;
   top: 60px;
-  left: 10px;
+  right: 10px; /* Alinhe o menu à direita */
   padding: 10px;
 }
 
@@ -65,4 +65,5 @@ nav {
 #mapa {
   flex: 1;
   padding: 20px;
+  text-align: right; /* Alinhe o conteúdo do mapa à direita */
 }
