--- a/projetos style.css
+++ b/projetos style.css
@@ -28,6 +28,7 @@ h1 {
   height: 300px; 
 }
 
+
 .grid-item img {
   width: 100%;
   height: 100%;
@@ -138,7 +139,6 @@ input:checked+.slider:before {
   position: relative;
 }
 
-/* Estilos para a imagem */
 .imagem-container img {
   width: 100%; 
   height: 100%;
@@ -147,4 +147,23 @@ input:checked+.slider:before {
 
 .imagem-container:hover img {
   transform: rotate(360deg);
+}
+
+a.button-link {
+  text-decoration: none;
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #ff5733;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  margin: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+a.button-link:hover {
+  background-color: #ff8146;
+  transform: scale(1.05);
 }
